--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "nodemon": "^2.0.12"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "sass --watch assets/style.scss assets/style.css"
   },
   "repository": {
     "type": "git",
